# face-tracking-eyes

./: .gitignore  Cargo.toml  README.md
assets/eye-model/source/: eye-model.gltf
src/: main.rs
