[package]
name = "face-tracking-eyes"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["default"] }
nokhwa = { version = "0.10", features = ["input-native"] }
rustface = "0.1"
image = "0.25"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
